src/test/compile-fail/column-offset-1-based.rs
# //~ ERROR 1:1: 1:2 error: expected item
